// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> Alert with AlertLink has the right link color 1`] = `
.c1 {
  font-weight: 700;
  color: #002752;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <div
        className="c0"
        type="primary"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="primary"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="primary"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="primary"
            >
              <a
                className="c1"
                href="#"
                type="primary"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right link color 2`] = `
.c1 {
  font-weight: 700;
  color: #202326;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #d6d8db;
  background: #e2e3e5;
  color: #383d41;
}

.c0 hr {
  border-top-color: #c8cbcf;
}

<Alert
  element="div"
  type="secondary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="secondary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="secondary"
    >
      <div
        className="c0"
        type="secondary"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="secondary"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="secondary"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="secondary"
            >
              <a
                className="c1"
                href="#"
                type="secondary"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right link color 3`] = `
.c1 {
  font-weight: 700;
  color: #0b2e13;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #c3e6cb;
  background: #d4edda;
  color: #155724;
}

.c0 hr {
  border-top-color: #b1dfbb;
}

<Alert
  element="div"
  type="success"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="success"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="success"
    >
      <div
        className="c0"
        type="success"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="success"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="success"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="success"
            >
              <a
                className="c1"
                href="#"
                type="success"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right link color 4`] = `
.c1 {
  font-weight: 700;
  color: #491217;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #f5c6cb;
  background: #f8d7da;
  color: #721c24;
}

.c0 hr {
  border-top-color: #f1b0b7;
}

<Alert
  element="div"
  type="danger"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="danger"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="danger"
    >
      <div
        className="c0"
        type="danger"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="danger"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="danger"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="danger"
            >
              <a
                className="c1"
                href="#"
                type="danger"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right link color 5`] = `
.c1 {
  font-weight: 700;
  color: #533f03;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #ffeeba;
  background: #fff3cd;
  color: #856404;
}

.c0 hr {
  border-top-color: #ffe8a1;
}

<Alert
  element="div"
  type="warning"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="warning"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="warning"
    >
      <div
        className="c0"
        type="warning"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="warning"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="warning"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="warning"
            >
              <a
                className="c1"
                href="#"
                type="warning"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right link color 6`] = `
.c1 {
  font-weight: 700;
  color: #062c33;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #bee5eb;
  background: #d1ecf1;
  color: #0c5460;
}

.c0 hr {
  border-top-color: #abdde5;
}

<Alert
  element="div"
  type="info"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="info"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="info"
    >
      <div
        className="c0"
        type="info"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="info"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="info"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="info"
            >
              <a
                className="c1"
                href="#"
                type="info"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right link color 7`] = `
.c1 {
  font-weight: 700;
  color: #686868;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #fdfdfe;
  background: #fefefe;
  color: #818182;
}

.c0 hr {
  border-top-color: #ececf6;
}

<Alert
  element="div"
  type="light"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="light"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="light"
    >
      <div
        className="c0"
        type="light"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="light"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="light"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="light"
            >
              <a
                className="c1"
                href="#"
                type="light"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right link color 8`] = `
.c1 {
  font-weight: 700;
  color: #040505;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #c6c8ca;
  background: #d6d8d9;
  color: #1b1e21;
}

.c0 hr {
  border-top-color: #b9bbbe;
}

<Alert
  element="div"
  type="dark"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="dark"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="dark"
    >
      <div
        className="c0"
        type="dark"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="dark"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="dark"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="dark"
            >
              <a
                className="c1"
                href="#"
                type="dark"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink has the right primary link color 1`] = `
.c1 {
  font-weight: 700;
  color: #002752;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <div
        className="c0"
        type="primary"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="primary"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="primary"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="primary"
            >
              <a
                className="c1"
                href="#"
                type="primary"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink renders correctly 1`] = `
.c1 {
  font-weight: 700;
  color: #002752;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <div
        className="c0"
        type="primary"
      >
        Test alert 
        <AlertLink
          element="a"
          href="#"
          key=".1"
          type="primary"
        >
          <Alert__StyledAlertLink
            as="a"
            element="a"
            href="#"
            type="primary"
          >
            <StyledComponent
              as="a"
              element="a"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              type="primary"
            >
              <a
                className="c1"
                href="#"
                type="primary"
              >
                with link
              </a>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with AlertLink renders correctly other elements 1`] = `
.c1 {
  font-weight: 700;
  color: #002752;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <div
        className="c0"
        type="primary"
      >
        Test alert 
        <AlertLink
          element="p"
          key=".1"
          type="primary"
        >
          <Alert__StyledAlertLink
            as="p"
            element="p"
            type="primary"
          >
            <StyledComponent
              as="p"
              element="p"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "font-weight:700;color:",
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "Alert__StyledAlertLink",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Alert__StyledAlertLink-sc-5b21cp-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              type="primary"
            >
              <p
                className="c1"
                type="primary"
              >
                with link
              </p>
            </StyledComponent>
          </Alert__StyledAlertLink>
        </AlertLink>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Alert with content renders the right elements 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <div
        className="c0"
        type="primary"
      >
        <h4
          key=".0"
        >
          Well done!
        </h4>
        <p
          key=".1"
        >
          Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.
        </p>
        <hr
          key=".2"
        />
        <p
          key=".3"
        >
          Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
        </p>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Dismissable Alert performs the right actions 1`] = `
.c1 {
  float: right;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1;
  color: #000;
  text-shadow: 0 1px 0 #fff;
  opacity: 0.5;
  padding: 0;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.75rem 1.25rem;
  color: inherit;
}

.c1:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.c1:not(:disabled):not(.disabled):hover,
.c1:not(:disabled):not(.disabled):focus {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 0.75;
}

.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  onDismiss={[Function]}
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    onDismiss={[Function]}
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onDismiss={[Function]}
      type="primary"
    >
      <div
        className="c0"
        onDismiss={[Function]}
        type="primary"
      >
        Test alert
        <Alert__CloseButton
          key=".1"
          onClick={[Function]}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Alert__CloseButton-sc-5b21cp-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "float:right;font-size:1.5rem;font-weight:700;line-height:1;color:#000;text-shadow:0 1px 0 #fff;opacity:0.5;",
                    [Function],
                    " &:not(:disabled):not(.disabled){cursor:pointer;}&:not(:disabled):not(.disabled):hover,&:not(:disabled):not(.disabled):focus{color:#000;text-decoration:none;opacity:0.75;}",
                    "position:absolute;top:0;right:0;padding:0.75rem 1.25rem;color:inherit;",
                  ],
                },
                "defaultProps": Object {
                  "children": <span
                    aria-hidden="true"
                  >
                    ×
                  </span>,
                },
                "displayName": "Alert__CloseButton",
                "foldedComponentIds": Array [
                  "Misc__CloseButton-klkgrl-0",
                ],
                "render": [Function],
                "styledComponentId": "Alert__CloseButton-sc-5b21cp-0",
                "target": "button",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onClick={[Function]}
          >
            <button
              className="c1"
              onClick={[Function]}
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </StyledComponent>
        </Alert__CloseButton>
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right danger colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #f5c6cb;
  background: #f8d7da;
  color: #721c24;
}

.c0 hr {
  border-top-color: #f1b0b7;
}

<Alert
  element="div"
  type="danger"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="danger"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="danger"
    >
      <div
        className="c0"
        type="danger"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right dark colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #c6c8ca;
  background: #d6d8d9;
  color: #1b1e21;
}

.c0 hr {
  border-top-color: #b9bbbe;
}

<Alert
  element="div"
  type="dark"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="dark"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="dark"
    >
      <div
        className="c0"
        type="dark"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right info colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #bee5eb;
  background: #d1ecf1;
  color: #0c5460;
}

.c0 hr {
  border-top-color: #abdde5;
}

<Alert
  element="div"
  type="info"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="info"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="info"
    >
      <div
        className="c0"
        type="info"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right light colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #fdfdfe;
  background: #fefefe;
  color: #818182;
}

.c0 hr {
  border-top-color: #ececf6;
}

<Alert
  element="div"
  type="light"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="light"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="light"
    >
      <div
        className="c0"
        type="light"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right primary colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <div
        className="c0"
        type="primary"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right secondary colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #d6d8db;
  background: #e2e3e5;
  color: #383d41;
}

.c0 hr {
  border-top-color: #c8cbcf;
}

<Alert
  element="div"
  type="secondary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="secondary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="secondary"
    >
      <div
        className="c0"
        type="secondary"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right success colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #c3e6cb;
  background: #d4edda;
  color: #155724;
}

.c0 hr {
  border-top-color: #b1dfbb;
}

<Alert
  element="div"
  type="success"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="success"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="success"
    >
      <div
        className="c0"
        type="success"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert has the right warning colors 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #ffeeba;
  background: #fff3cd;
  color: #856404;
}

.c0 hr {
  border-top-color: #ffe8a1;
}

<Alert
  element="div"
  type="warning"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="warning"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="warning"
    >
      <div
        className="c0"
        type="warning"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert renders correctly 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="div"
  type="primary"
>
  <Alert__StyledAlert
    as="div"
    element="div"
    type="primary"
  >
    <StyledComponent
      as="div"
      element="div"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <div
        className="c0"
        type="primary"
      >
        Test alert
      </div>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;

exports[`<Alert /> Simple Alert renders correctly other elements 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  border-color: #b8daff;
  background: #cce5ff;
  color: #004085;
}

.c0 hr {
  border-top-color: #9fcdff;
}

<Alert
  element="p"
  type="primary"
>
  <Alert__StyledAlert
    as="p"
    element="p"
    type="primary"
  >
    <StyledComponent
      as="p"
      element="p"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Alert__StyledAlert-sc-5b21cp-2",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:relative;padding:0.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:0.25rem;border-color:",
              [Function],
              ";background:",
              [Function],
              ";color:",
              [Function],
              ";hr{border-top-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Alert__StyledAlert",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Alert__StyledAlert-sc-5b21cp-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="primary"
    >
      <p
        className="c0"
        type="primary"
      >
        Test alert
      </p>
    </StyledComponent>
  </Alert__StyledAlert>
</Alert>
`;
